# ctatuc

./: README.md  main.py  pyproject.toml
controllino_code/: simple_ctatuc_mqtt.ino
static/css/: style.css
templates/: base.html  index.html
